[project]
name = "uptime-kuma-cli"
version = "0.1.1"
description = "CLI tool for managing Uptime Kuma monitors"
readme = "README.md"
requires-python = ">=3.13"
license = "MIT"
keywords = ["uptime-kuma", "monitoring", "cli"]
classifiers = [
    "Environment :: Console",
    "Topic :: System :: Monitoring",
]
dependencies = [
    "rich>=14.3.3",
    "typer>=0.24.1",
    "uptime-kuma-api>=1.2.1",
]

[project.urls]
Repository = "https://github.com/leaperone/uptime-kuma-cli"

[project.scripts]
kuma = "main:app"
